<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DesktopUI</string>
    <string name="sett_base">DUI - общие настройки</string>
    <string name="sett_my">DUI - настройки приложения</string>
		
    <string name="add">Добавить</string>
	<string name="wall">Обои</string>
    <string name="srch">Поиск</string>
    <string name="apps">Приложения</string>
    <string name="sett">Настройки</string>
    <string name="restart">Перезапуск</string>
		
	<string name="mysett">Параметры DesktopUI</string>
    <string name="sett_all">Все настройки</string>
    <string name="exit">Выйти</string>
    <string name="exit_al">Выйти?</string>
		
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="cntinue">Продолжить</string>

	<string name="mst_scr_icons">Настройки иконок</string>
	<string name="mst_itmsize">Размер иконок</string>
	<string name="mst_fntsize">Размер шрифта</string>
	<string name="mst_res_icons">Брать другие иконки</string>
	<string name="mst_res_icons_density">Плотность иконок</string>
	<string name="mst_scr_icdraw">Опции отрисовки</string>
	<string name="mst_bmp_quality">Высокое качество</string>
	<string name="mst_cache_clear">Очищать кеш иконок</string>
	<string name="mst_icdraw_onscreen">Сокращенное рисование</string>
	<string name="mst_icdelay_load">Отложенная загрузка</string>
	<string name="mst_reset">Сбросить всё</string>
	<string name="mst_scr_scroll">Настройки прокрутки</string>
	<string name="mst_cicle_scroll">Циклическая прокрутка</string>
	<string name="mst_scroll_speed">Скорость прокрутки</string>
	<string name="mst_wall_mode">Режим обоев</string>
	<string name="mst_actionbar">Показать панель</string>

	<string name="mst_scr_icons_sum">Размер иконок, размер шрифта, опции отрисовки</string>
	<string name="mst_scr_scroll_sum">Циклическая прокрутка, скорость</string>
	<string name="mst_bmp_quality_sum">Низкое качество иконок экономит память</string>
	<string name="mst_cache_clear_sum">Очищаются иконки за пределами видимости</string>
	<string name="mst_icdraw_onscreen_sum">Иконки рисуются и загружаются только когда они видны</string>
	<string name="mst_icdelay_load_sum">Уменьшает фризы при загрузке</string>

	<string name="pref_icons_category">icons_</string>
	<string name="pref_is">icons_iconsize</string>
	<string name="pref_fs">icons_fontsize</string>
	<string name="pref_icres">icons_icresource</string>
	<string name="pref_icdensity">icons_icdensity</string>
	<string name="pref_bq">icons_bmpquality</string>
	<string name="pref_iccache">icons_icclearcache</string>
	<string name="pref_icdraw">icons_icdrawonscreen</string>
	<string name="pref_icdelload">icons_icdelayload</string>
	<string name="pref_scroll_category">scroll_</string>
	<string name="pref_cs">scroll_ciclescroll</string>
	<string name="pref_ss">scroll_scrollspeed</string>
	<string name="pref_wall_category">wallpaper_</string>
	<string name="pref_wall">wallpaper_mode</string>
	<string name="pref_actionbar">actionbar</string>

	<string name="prefex_defx">defx</string>
	<string name="prefex_defy">defy</string>
		
    <string name="edit">Редактирование</string>
    <string name="edit_n">Имя</string>
    <string name="edit_p1">Параметр 1</string>
    <string name="edit_p2">Параметр 2</string>
    <string name="edit_p3">Параметр 3</string>

    <string name="clear_pref">
		Внимание! Сотрутся настройки и значки! 
		Вы действиьельно хотите все удалить?</string>
    <string name="error_info">
		Произошла ошибка приложения!
		Скопируйте текст ошибки и выложите на форум.</string>
</resources>
