<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceScreen
		android:key="@string/pref_icons_category"
		android:title="@string/mst_scr_icons"
		android:summary="@string/mst_scr_icons_sum">
		<EditTextPreference
			android:key="@string/pref_is"
			android:title="@string/mst_itmsize"
			android:defaultValue="70"/>
		<EditTextPreference
			android:key="@string/pref_fs"
			android:title="@string/mst_fntsize"
			android:defaultValue="15"/>
		<CheckBoxPreference
			android:key="@string/pref_bq"
			android:title="@string/mst_bmp_quality"
			android:defaultValue="false"/>
		<CheckBoxPreference
			android:key="@string/pref_icres"
			android:title="@string/mst_res_icons"
			android:defaultValue="false"/>
		<ListPreference
			android:key="@string/pref_icdensity"
			android:title="@string/mst_res_icons_density"
			android:entries="@array/mst_icden_entr"
			android:entryValues="@array/mst_icden_vals"
			android:defaultValue="320"/>
	</PreferenceScreen>
	<PreferenceScreen
		android:key="@string/pref_scroll_category"
		android:title="@string/mst_scr_scroll"
		android:summary="@string/mst_scr_scroll_sum">
		<CheckBoxPreference
			android:key="@string/pref_cs"
			android:title="@string/mst_cicle_scroll"
			android:defaultValue="false"/>
		<ListPreference
			android:key="@string/pref_ss"
			android:title="@string/mst_scroll_speed"
			android:entries="@array/mst_ss_entr"
			android:entryValues="@array/mst_ss_vals"
			android:defaultValue="-1"/>
	</PreferenceScreen>
	<ListPreference
		android:key="@string/pref_wall"
		android:title="@string/mst_wall_mode"
		android:entries="@array/mst_wall_entr"
		android:entryValues="@array/mst_int3_vals"
		android:defaultValue="2"/>
	<CheckBoxPreference
		android:key="@string/pref_actionbar"
		android:title="@string/mst_actionbar"
		android:defaultValue="false"/>
	<CheckBoxPreference
		android:key="@string/pref_oldtheme"
		android:title="@string/mst_oldtheme"
		android:defaultValue="false"/>

</PreferenceScreen>
