<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/mysett_view"
	android:layout_width="150dp"
	android:layout_height="fill_parent"
	android:orientation="vertical">
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical">

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:orientation="horizontal">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingRight="6dp"
					android:text="@string/mst_itmsize"/>
				<EditText
					android:layout_width="100dp"
					android:layout_height="wrap_content"
					android:inputType="number"
					android:id="@+id/itm_size"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:orientation="horizontal">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/mst_fntsize"/>
				<EditText
					android:layout_width="100dp"
					android:layout_height="wrap_content"
					android:inputType="number"
					android:id="@+id/fnt_size"/>
			</LinearLayout>
			
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:orientation="horizontal">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/mst_bmp_quality"/>
				<CheckBox
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/bmp_quality"/>
			</LinearLayout>

			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/mst_reset"
				android:id="@+id/btn_reset"/>

		</LinearLayout>

	</ScrollView>
</LinearLayout>
