<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/error_view"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textSize="16dp"
		android:textColor="#F00"
		android:text="@string/error_info"/>

	<EditText
	    android:id="@+id/error_text"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="#000"
	    android:minLines="2"
	    android:maxLines="5"
	    android:singleLine="false"
	    android:textColor="#FFF" />
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="horizontal">
		<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="0.4"
			android:layout_marginRight="5dp"
		    android:padding="@dimen/listitem_p"
			android:background="#444"
			android:textColor="#FFF"
		    android:textSize="@dimen/listitem_h"
			android:text="@string/cntinue"
			android:id="@+id/error_continue"/>
		<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="0.4"
		    android:padding="@dimen/listitem_p"
			android:background="#444"
			android:textColor="#FFF"
		    android:textSize="@dimen/listitem_h"
			android:text="@string/sett"
			android:id="@+id/error_settings"/>
	</LinearLayout>
</LinearLayout>
